--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,15 +9,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
-    - name: Build and run unit tests
+    - name: Install dependencies
       run: |
-        docker build -t shell .
-        docker run -p 80:8000 --rm shell /comp0010/tools/test
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-    - name: Build and run system tests
-      run: |
-        docker build -t comp0010-system-test .
-        docker run -p 80:8000 --rm comp0010-system-test /comp0010/system_test/tests.py
+    - name: Run system tests
+      run: python -m unittest system_test/tests.py
+
+    - name: Run unit tests
+      run: python -m unittest test/test_shell.py 
